--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,16 @@ fiona==1.9.6
 
 matplotlib==3.9.2
 python-docx==1.1.2
+
+fastapi
+uvicorn[standard]
+requests
+shapely
+pyproj
+geopandas
+fiona
+pandas
+numpy
+python-multipart
+
+
